--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1246,7 +1246,7 @@ angal.priceslist.acode                                                          
 angal.priceslist.adescription                                                                          = unaDescrizione
 angal.priceslist.changelist                                                                            = Cambia listino
 angal.priceslist.copy.btn                                                                              = Copia
-angal.priceslist.copy.btn.key                                                                          = C
+angal.priceslist.copy.btn.key                                                                          = P
 angal.priceslist.copyof                                                                                = Copia di
 angal.priceslist.currency.col                                                                          = Valuta
 angal.priceslist.currencystar                                                                          = Valuta*
