Resolving shortcut key conflicts (FR)

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -13,7 +13,7 @@ angal.admission.admitted.txt                                                    
 angal.admission.age.border                                                                             = Âge
 angal.admission.beddays.border                                                                         = Jours de Lit
 angal.admission.bill.btn                                                                               = Facture
-angal.admission.bill.btn.key                                                                           = F
+angal.admission.bill.btn.key                                                                           = C
 angal.admission.bloodtype.label                                                                        = Groupe Sanguin
 angal.admission.cannotmergeadmittedpatients.msg                                                        = Impossible de fusionner les patients hospitalisés.
 angal.admission.cannotmergewithpendingbills.msg                                                        = Impossible de fusionner avec des factures en attente.
@@ -65,7 +65,7 @@ angal.admission.invalidoperationdate.fmt.msg                                    
 angal.admission.malnutrition.txt                                                                       = Malnutrition
 angal.admission.malnutritioncontrol                                                                    = Contrôle malnutrition
 angal.admission.malnutritioncontrol.btn                                                                = Contrôle Malnutrition
-angal.admission.malnutritioncontrol.btn.key                                                            = M
+angal.admission.malnutritioncontrol.btn.key                                                            = C
 angal.admission.maritalstatus.label                                                                    = État Civil
 angal.admission.merge                                                                                  = Fusionner
 angal.admission.merge.btn                                                                              = Fusionner
@@ -321,7 +321,7 @@ angal.common.status.txt                                                         
 angal.common.stockcard.btn                                                                             = MouvementsCard
 angal.common.stockcard.btn.key                                                                         = D
 angal.common.stockledger.btn                                                                           = Registre des Stocks
-angal.common.stockledger.btn.key                                                                       = R
+angal.common.stockledger.btn.key                                                                       = S
 angal.common.submit.btn                                                                                = Envoyer
 angal.common.submit.btn.key                                                                            = E
 angal.common.telephone.txt                                                                             = Téléphone
@@ -637,7 +637,7 @@ angal.medicals.pleaseselectareport.msg                                          
 angal.medicals.pleaseselectperiod.msg                                                                  = Veuillez sélectionner une période
 angal.medicals.selecttype                                                                              = Sélectionner typologie
 angal.medicals.stock.btn                                                                               = Magasin
-angal.medicals.stock.btn.key                                                                           = M
+angal.medicals.stock.btn.key                                                                           = G
 angal.medicals.stock.col                                                                               = Magasin
 angal.medicals.stock.txt                                                                               = Magasin
 angal.medicals.theinsertedmedicalisalreadyinuse.msg                                                    = Le produit médical inséré est déjà utilisé.
@@ -967,7 +967,7 @@ angal.newbill.billdateaisfterthefirstpayment.msg                                
 angal.newbill.billhasbeenchangedwouldyouliketosavethechanges.msg                                       = La facture a été modifiée\nvoulez vous enregistrer le changement?
 angal.newbill.billsinthefuturearenotallowed.msg                                                        = Factures dans le future ne sont pas autorisées.
 angal.newbill.changepatient.btn                                                                        = Changer de Patient
-angal.newbill.changepatient.btn.key                                                                    = C
+angal.newbill.changepatient.btn.key                                                                    = P
 angal.newbill.changethepatientassociatedwiththisbill.tooltip                                           = Changer le Patient associé avec cette facture?
 angal.newbill.chooseadescription.txt                                                                   = Choisir une description:
 angal.newbill.custom.btn                                                                               = Personnalisation
@@ -1003,7 +1003,7 @@ angal.newbill.operation.btn                                                     
 angal.newbill.operation.btn.key                                                                        = O
 angal.newbill.operation.title                                                                          = Opération
 angal.newbill.other.btn                                                                                = Autre
-angal.newbill.other.btn.key                                                                            = T
+angal.newbill.other.btn.key                                                                            = U
 angal.newbill.paid.btn                                                                                 = Payé
 angal.newbill.paid.btn.key                                                                             = É
 angal.newbill.patientassociatedwiththisbillnolongerexists.msg                                          = Le Patient associé avec cette facture n'existe plus
@@ -1018,7 +1018,7 @@ angal.newbill.pleaseselectanitem.txt                                            
 angal.newbill.refund.btn                                                                               = Rembourser
 angal.newbill.refund.btn.key                                                                           = R
 angal.newbill.removeitem.btn                                                                           = Éliminer Élément
-angal.newbill.removeitem.btn.key                                                                       = É
+angal.newbill.removeitem.btn.key                                                                       = L
 angal.newbill.removepayment.btn                                                                        = Supprimer Payement
 angal.newbill.removepayment.btn.key                                                                    = S
 angal.newbill.removethepatientassociatedwiththisbill.tooltip                                           = Supprimer le Patient associé avec cette facture?
