Apply suggestions from code review

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -837,8 +837,8 @@ angal.medtype.editmedicaltype.title                                             
 angal.medtype.medicaltypebrowser.title                                                                 = Lista Tipologías Fármacos
 angal.medtype.newmedicaltype.title                                                                     = Nueva Expresión de Tipología Fármaco
 angal.menu.accounting                                                                                  = Contabilidad
-angal.menu.accounting.cashiersfilter                                                                   = Cashier's Filter
-angal.menu.accounting.editclosedbills                                                                  = Edit Closed Bills
+angal.menu.accounting.cashiersfilter                                                                   = Filtro de usuarios
+angal.menu.accounting.editclosedbills                                                                  = Editar facturas cerradas
 angal.menu.admchart                                                                                    = Ficha de Admisión
 angal.menu.admission                                                                                   = Paciente / Hospitalización
 angal.menu.admtype                                                                                     = Tipologías Hospitalización
