Transifex merge [manual sync] (#975)
* Translate /bundle/language_en.properties in fr

at least 80% translated updated for the source file '/bundle/language_en.properties'
on the 'fr' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /bundle/language_en.properties in it

at least 80% translated updated for the source file '/bundle/language_en.properties'
on the 'it' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /bundle/language_en.properties in es

at least 80% translated updated for the source file '/bundle/language_en.properties'
on the 'es' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /rpt/BillsReportPending.properties in fr

at least 80% translated updated for the source file '/rpt/BillsReportPending.properties'
on the 'fr' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /rpt/BillsReportPending.properties in it

at least 80% translated updated for the source file '/rpt/BillsReportPending.properties'
on the 'it' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /rpt/BillsReportPending.properties in es

at least 80% translated updated for the source file '/rpt/BillsReportPending.properties'
on the 'es' language.

 Manual sync of partially translated files: untranslated content is included with an empty translation or source language content depending on file format

* Translate /

--- a/rpt/BillsReportPending_fr.properties
+++ b/rpt/BillsReportPending_fr.properties
@@ -24,9 +24,9 @@ Receivables = RECEVABLES
 
 Report.From = Rapport de
 
-Status = ETAT PATIENT
+Status = ÉTAT PATIENT
 
-To = Á
+To = À
 
 Total.Billed = TOTAL FACTURE
 Total.Income = TOTALE REVENUES
