--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -13,7 +13,7 @@ angal.admission.admitted.txt                                                    
 angal.admission.age.border                                                                             = Âge
 angal.admission.beddays.border                                                                         = Jours de Lit
 angal.admission.bill.btn                                                                               = Facture
-angal.admission.bill.btn.key                                                                           = F
+angal.admission.bill.btn.key                                                                           = C
 angal.admission.bloodtype.label                                                                        = Groupe Sanguin
 angal.admission.cannotmergeadmittedpatients.msg                                                        = Impossible de fusionner les patients hospitalisés.
 angal.admission.cannotmergewithpendingbills.msg                                                        = Impossible de fusionner avec des factures en attente.
@@ -26,7 +26,7 @@ angal.admission.controln2date.border                                            
 angal.admission.count.fmt.txt                                                                          = Compte: {0}
 angal.admission.data                                                                                   = Donnée
 angal.admission.data.btn                                                                               = Donnée
-angal.admission.data.btn.key                                                                           = É
+angal.admission.data.btn.key                                                                           = E
 angal.admission.date.border                                                                            = Date
 angal.admission.deletepatient                                                                          = Supprimer patient
 angal.admission.deletepatient.fmt.msg                                                                  = Supprimer patient: {0}?
@@ -65,7 +65,7 @@ angal.admission.invalidoperationdate.fmt.msg                                    
 angal.admission.malnutrition.txt                                                                       = Malnutrition
 angal.admission.malnutritioncontrol                                                                    = Contrôle malnutrition
 angal.admission.malnutritioncontrol.btn                                                                = Contrôle Malnutrition
-angal.admission.malnutritioncontrol.btn.key                                                            = M
+angal.admission.malnutritioncontrol.btn.key                                                            = C
 angal.admission.maritalstatus.label                                                                    = État Civil
 angal.admission.merge                                                                                  = Fusionner
 angal.admission.merge.btn                                                                              = Fusionner
@@ -321,7 +321,7 @@ angal.common.status.txt                                                         
 angal.common.stockcard.btn                                                                             = MouvementsCard
 angal.common.stockcard.btn.key                                                                         = D
 angal.common.stockledger.btn                                                                           = Registre des Stocks
-angal.common.stockledger.btn.key                                                                       = R
+angal.common.stockledger.btn.key                                                                       = S
 angal.common.submit.btn                                                                                = Envoyer
 angal.common.submit.btn.key                                                                            = E
 angal.common.telephone.txt                                                                             = Téléphone
@@ -482,7 +482,7 @@ angal.examination.hgt                                                           
 angal.examination.hgt.col                                                                              = HGT
 angal.examination.lastnote.fmt.msg                                                                     = Dernier Remarque {0}:\n{1}\n\n
 angal.examination.note                                                                                 = Remarque
-angal.examination.note.col                                                                             = Remarques
+angal.examination.note.col                                                                             = Remarque
 angal.examination.pleaseinsertavalidauscultationdescription.msg                                        = Veuillez insérer une description valide de l'Auscultation.
 angal.examination.pleaseinsertavalidboweldescription.msg                                               = Veuillez insérer une description valide pour Intestin.
 angal.examination.pleaseinsertavaliddiuresisdescription.msg                                            = Veuillez insérer une description valide de Diurèse.
@@ -637,7 +637,7 @@ angal.medicals.pleaseselectareport.msg                                          
 angal.medicals.pleaseselectperiod.msg                                                                  = Veuillez sélectionner une période
 angal.medicals.selecttype                                                                              = Sélectionner typologie
 angal.medicals.stock.btn                                                                               = Magasin
-angal.medicals.stock.btn.key                                                                           = M
+angal.medicals.stock.btn.key                                                                           = G
 angal.medicals.stock.col                                                                               = Magasin
 angal.medicals.stock.txt                                                                               = Magasin
 angal.medicals.theinsertedmedicalisalreadyinuse.msg                                                    = Le produit médical inséré est déjà utilisé.
@@ -799,7 +799,7 @@ angal.medicalstockward.rectify.unitcost                                         
 angal.medicalstockward.report.btn                                                                      = Rapport
 angal.medicalstockward.report.btn.key                                                                  = P
 angal.medicalstockward.reset.btn                                                                       = Réinitialiser
-angal.medicalstockward.reset.btn.key                                                                   = É
+angal.medicalstockward.reset.btn.key                                                                   = E
 angal.medicalstockward.selectaward                                                                     = <selectionnez un département>
 angal.medicalstockward.ward                                                                            = DEPARTEMENT
 angal.medicalstockward.weightfrommustbelowerthanweightto                                               = 'poids de' doit être plus bas que 'poids à'
@@ -837,6 +837,8 @@ angal.medtype.editmedicaltype.title                                             
 angal.medtype.medicaltypebrowser.title                                                                 = Liste Type Produits Médicaux
 angal.medtype.newmedicaltype.title                                                                     = Nouvelle typologie Produit Médical
 angal.menu.accounting                                                                                  = Comptabilité
+angal.menu.accounting.cashiersfilter                                                                   = Filtre de caissier
+angal.menu.accounting.editclosedbills                                                                  = Modifier les factures fermées
 angal.menu.admchart                                                                                    = Dossier d'admission
 angal.menu.admission                                                                                   = Hospitalisation/Patient
 angal.menu.admtype                                                                                     = Typologie Hospitalisation
@@ -884,7 +886,7 @@ angal.menu.btn.opdchart                                                         
 angal.menu.btn.operation                                                                               = Interventions
 angal.menu.btn.operationtype                                                                           = Typologie Intervention
 angal.menu.btn.otherprices                                                                             = Autres Prix
-angal.menu.btn.patientvaccine                                                                          = Vaccins du Patient
+angal.menu.btn.patientvaccine                                                                          = Vaccins
 angal.menu.btn.patreport                                                                               = Visualiser le Rapport
 angal.menu.btn.pharmacy                                                                                = Pharmacie
 angal.menu.btn.pretreatmenttype                                                                        = Typologie Traitements Grossesse
@@ -965,7 +967,7 @@ angal.newbill.billdateaisfterthefirstpayment.msg                                
 angal.newbill.billhasbeenchangedwouldyouliketosavethechanges.msg                                       = La facture a été modifiée\nvoulez vous enregistrer le changement?
 angal.newbill.billsinthefuturearenotallowed.msg                                                        = Factures dans le future ne sont pas autorisées.
 angal.newbill.changepatient.btn                                                                        = Changer de Patient
-angal.newbill.changepatient.btn.key                                                                    = C
+angal.newbill.changepatient.btn.key                                                                    = P
 angal.newbill.changethepatientassociatedwiththisbill.tooltip                                           = Changer le Patient associé avec cette facture?
 angal.newbill.chooseadescription.txt                                                                   = Choisir une description:
 angal.newbill.custom.btn                                                                               = Personnalisation
@@ -1001,7 +1003,7 @@ angal.newbill.operation.btn                                                     
 angal.newbill.operation.btn.key                                                                        = O
 angal.newbill.operation.title                                                                          = Opération
 angal.newbill.other.btn                                                                                = Autre
-angal.newbill.other.btn.key                                                                            = T
+angal.newbill.other.btn.key                                                                            = U
 angal.newbill.paid.btn                                                                                 = Payé
 angal.newbill.paid.btn.key                                                                             = É
 angal.newbill.patientassociatedwiththisbillnolongerexists.msg                                          = Le Patient associé avec cette facture n'existe plus
@@ -1016,7 +1018,7 @@ angal.newbill.pleaseselectanitem.txt                                            
 angal.newbill.refund.btn                                                                               = Rembourser
 angal.newbill.refund.btn.key                                                                           = R
 angal.newbill.removeitem.btn                                                                           = Éliminer Élément
-angal.newbill.removeitem.btn.key                                                                       = É
+angal.newbill.removeitem.btn.key                                                                       = L
 angal.newbill.removepayment.btn                                                                        = Supprimer Payement
 angal.newbill.removepayment.btn.key                                                                    = S
 angal.newbill.removethepatientassociatedwiththisbill.tooltip                                           = Supprimer le Patient associé avec cette facture?
@@ -1039,6 +1041,7 @@ angal.opd.attendancedate.txt                                                    
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = Vous ne pouvez pas entrer une date du passé pour la prochaine visite.
 angal.opd.datefrommustbebefordateto.msg                                                                = La "Date De" doit être avant la "Date à".
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Supprimer les DDP suivants?\n\nDate d'enregistrement={0}\nMaladie={1}\nÂge={2}, Sexe={3}\nDate Consultation={4}
+angal.opd.deletefollowingopdextended.fmt.msg                                                           = Supprimer les DDP suivants?\n\nDate d'enregistrement={0}\nMaladie={1}\nÂge={2}, Sexe={3}\nDate Consultation={4}\nDate Visit={5}
 angal.opd.diagnosis.txt                                                                                = Diagnostic
 angal.opd.diagnosisnfulllist2.txt                                                                      = Diagnostic n.2 (liste compléte)
 angal.opd.diagnosisnfulllist3.txt                                                                      = Diagnostic n.3 (liste compléte)
@@ -1103,6 +1106,8 @@ angal.operation.result.success.txt                                              
 angal.operation.result.undefined.txt                                                                   = Inconnu
 angal.operation.selecttype                                                                             = Sélectionner typologie
 angal.operation.type                                                                                   = Typologie
+angal.operationrow.clear.btn                                                                           = Nettoyer
+angal.operationrow.clear.btn.key                                                                       = N
 angal.operationrowedit.operation                                                                       = Opération:
 angal.operationrowedit.remark                                                                          = Remarques:
 angal.operationrowedit.saveerror                                                                       = Erreur lors de l'enregistrement
@@ -1331,6 +1336,7 @@ angal.stat.august                                                               
 angal.stat.dailyopdmorbiditysummaryover5                                                               = MOH 705A - Supérieur à 5 - Ambulatoire journalier - Résumé état pathologique
 angal.stat.dailyopdmorbiditysummaryunder5                                                              = MOH 705A - Supérieur à 5 - Ambulatoire journalier - Résumé état pathologique
 angal.stat.december                                                                                    = Décembre
+angal.stat.diseaselist                                                                                 = Liste Maladies
 angal.stat.diseasereport.title                                                                         = Rapport Maladie
 angal.stat.examslist                                                                                   = Liste Examens
 angal.stat.examsreport.title                                                                           = Rapport Examens
@@ -1400,7 +1406,7 @@ angal.therapy.addvisit.btn                                                      
 angal.therapy.addvisit.btn.key                                                                         = J
 angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = Une thérapie ne peut pas être définie pour une date qui est passée.
 angal.therapy.availablem                                                                               = DISPONIBLE
-angal.therapy.changenotifysettingsfor.fmt                                                              = modifications des remarques de {0}
+angal.therapy.changenotifysettingsfor.fmt                                                              = Modifications des remarques de {0}
 angal.therapy.checkavailability.btn                                                                    = Contrôler la Disponibilité
 angal.therapy.checkavailability.btn.key                                                                = C
 angal.therapy.daydays                                                                                  = jour/s
