--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -48,7 +48,7 @@ angal.admission.editadmissionrecord.title                                       
 angal.admission.editpatient                                                                            = Modifica Paziente
 angal.admission.examination                                                                            = Esame Obiettivo
 angal.admission.examination.btn                                                                        = Esame Obiettivo
-angal.admission.examination.btn.key                                                                    = A
+angal.admission.examination.btn.key                                                                    = O
 angal.admission.examination.txt                                                                        = Esame Obiettivo
 angal.admission.fatherisalive                                                                          = Padre vivo
 angal.admission.fatherisdead                                                                           = Padre morto
@@ -190,7 +190,7 @@ angal.billbrowser.deletebill.btn.key                                            
 angal.billbrowser.deletetheselectedbill.msg                                                            = Eliminare la fattura selezionata?
 angal.billbrowser.editbill                                                                             = Modifica Conto
 angal.billbrowser.editbill.btn                                                                         = Modifica Conto
-angal.billbrowser.editbill.btn.key                                                                     = C
+angal.billbrowser.editbill.btn.key                                                                     = F
 angal.billbrowser.fullreportallbills.txt                                                               = Report Completo (tutte le ricevute)
 angal.billbrowser.lastpayment.col                                                                      = Ultimo Pagamento
 angal.billbrowser.month.txt                                                                            = Mese
@@ -211,7 +211,7 @@ angal.billbrowser.receipt.btn                                                   
 angal.billbrowser.receipt.btn.key                                                                      = R
 angal.billbrowser.report                                                                               = Report
 angal.billbrowser.report.btn                                                                           = Report
-angal.billbrowser.report.btn.key                                                                       = R
+angal.billbrowser.report.btn.key                                                                       = P
 angal.billbrowser.shortreportonlybaddebt.txt                                                           = Report breve (solo ricevute BadDebts)
 angal.billbrowser.thebilldeleted.msg                                                                   = Il conto viene cancellato.
 angal.billbrowser.thebillisstillopen.msg                                                               = Questo disegno di legge è ancora aperto.
@@ -275,8 +275,8 @@ angal.common.hours                                                              
 angal.common.id.txt                                                                                    = ID
 angal.common.info.title                                                                                = Informazione
 angal.common.laboratory.txt                                                                            = Diagnostica
-angal.common.launchreport.btn                                                                          = Rapporto di Lancio
-angal.common.launchreport.btn.key                                                                      = R
+angal.common.launchreport.btn                                                                          = Report Clinico
+angal.common.launchreport.btn.key                                                                      = C
 angal.common.male.btn                                                                                  = Maschio
 angal.common.male.txt                                                                                  = Maschio
 angal.common.minutes                                                                                   = Minuti
@@ -307,12 +307,12 @@ angal.common.reminder.txt                                                       
 angal.common.result.txt                                                                                = Risultato
 angal.common.save                                                                                      = Salva
 angal.common.save.btn                                                                                  = Salva
-angal.common.save.btn.key                                                                              = V
+angal.common.save.btn.key                                                                              = S
 angal.common.search.btn                                                                                = Cerca
 angal.common.search.btn.key                                                                            = R
 angal.common.search.txt                                                                                = Ricerca
 angal.common.select.btn                                                                                = Seleziona
-angal.common.select.btn.key                                                                            = S
+angal.common.select.btn.key                                                                            = E
 angal.common.selectsex.txt                                                                             = Seleziona Sesso
 angal.common.sex.label                                                                                 = Sesso:
 angal.common.sex.txt                                                                                   = Sesso
@@ -807,13 +807,13 @@ angal.medicalstockwardedit.changepatient                                        
 angal.medicalstockwardedit.changethepatientassociatedwiththismovement                                  = Cambia il paziente associato a questo movimento
 angal.medicalstockwardedit.drug                                                                        = Farmaco
 angal.medicalstockwardedit.insertvalidage                                                              = Inserire Età valida
-angal.medicalstockwardedit.internaluse                                                                 = uso interno
+angal.medicalstockwardedit.internaluse                                                                 = Uso Interno
 angal.medicalstockwardedit.medical.btn                                                                 = Medicinale
 angal.medicalstockwardedit.medical.btn.key                                                             = M
 angal.medicalstockwardedit.patient                                                                     = Paziente
 angal.medicalstockwardedit.pickpatient                                                                 = Associa Paziente
 angal.medicalstockwardedit.pickpatient.btn                                                             = Associa Paziente
-angal.medicalstockwardedit.pickpatient.btn.key                                                         = A
+angal.medicalstockwardedit.pickpatient.btn.key                                                         = P
 angal.medicalstockwardedit.pieces                                                                      = pezzi
 angal.medicalstockwardedit.pleaseinsertadescriptionfortheinternaluse.msg                               = Si prega di inserire una descrizione per uso interno.
 angal.medicalstockwardedit.pleaseselectadrug.msg                                                       = Seleziona un farmaco.
@@ -967,7 +967,7 @@ angal.newbill.billdateaisfterthefirstpayment.msg                                
 angal.newbill.billhasbeenchangedwouldyouliketosavethechanges.msg                                       = Il conto è stato cambiato. Vuoi salvare le modifiche?
 angal.newbill.billsinthefuturearenotallowed.msg                                                        = Non sono ammesse fatture in futuro.
 angal.newbill.changepatient.btn                                                                        = Cambia Paziente
-angal.newbill.changepatient.btn.key                                                                    = C
+angal.newbill.changepatient.btn.key                                                                    = P
 angal.newbill.changethepatientassociatedwiththisbill.tooltip                                           = Cambia il paziente associato a questo conto.
 angal.newbill.chooseadescription.txt                                                                   = Scegli una descrizione:
 angal.newbill.custom.btn                                                                               = Personalizzato
@@ -982,7 +982,7 @@ angal.newbill.exam.btn                                                          
 angal.newbill.exam.btn.key                                                                             = E
 angal.newbill.exam.title                                                                               = Esame
 angal.newbill.findpatient.btn                                                                          = Trova Paziente
-angal.newbill.findpatient.btn.key                                                                      = T
+angal.newbill.findpatient.btn.key                                                                      = P
 angal.newbill.givechange.btn                                                                           = Dai Resto
 angal.newbill.givechange.btn.key                                                                       = D
 angal.newbill.givechange.fmt.msg                                                                       = Dai resto: {0}
@@ -1003,7 +1003,7 @@ angal.newbill.operation.btn                                                     
 angal.newbill.operation.btn.key                                                                        = O
 angal.newbill.operation.title                                                                          = Operazione
 angal.newbill.other.btn                                                                                = Altro
-angal.newbill.other.btn.key                                                                            = T
+angal.newbill.other.btn.key                                                                            = A
 angal.newbill.paid.btn                                                                                 = Pagato
 angal.newbill.paid.btn.key                                                                             = T
 angal.newbill.patientassociatedwiththisbillnolongerexists.msg                                          = Il paziente associato a questo conto non esiste più.
@@ -1020,7 +1020,7 @@ angal.newbill.refund.btn.key                                                    
 angal.newbill.removeitem.btn                                                                           = Rimuovi Elemento
 angal.newbill.removeitem.btn.key                                                                       = U
 angal.newbill.removepayment.btn                                                                        = Rimuovi Pagamento
-angal.newbill.removepayment.btn.key                                                                    = M
+angal.newbill.removepayment.btn.key                                                                    = V
 angal.newbill.removethepatientassociatedwiththisbill.tooltip                                           = Rimuovere il paziente associato a questa fattura?
 angal.newbill.selectamedical.txt                                                                       = Seleziona un medicinale:
 angal.newbill.selectanexam.txt                                                                         = Seleziona un esame:
@@ -1040,7 +1040,8 @@ angal.opd.alldiseases.txt                                                       
 angal.opd.attendancedate.txt                                                                           = Data Visita
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = Non è possibile impostare una data nel passato per la prossima visita.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Da data' deve essere minore di 'A data'.
-angal.opd.deletefollowingopd.fmt.msg                                                                   = Eliminare il seguente visita?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
+angal.opd.deletefollowingopd.fmt.msg                                                                   = Eliminare la seguente visita?\n\nData Registrazione={0}\nPatologia={1}\nEtà={2}, Sesso={3}\nData Visita={4}
+angal.opd.deletefollowingopdextended.fmt.msg                                                           = Eliminare la seguente visita?\n\nPaziente={0}\n\nData Registrazione={1}\nPatologia={2}\nEtà={3}, Sesso={4}\nData Visita={5}
 angal.opd.diagnosis.txt                                                                                = Diagnosi
 angal.opd.diagnosisnfulllist2.txt                                                                      = Diagnosi n.2 (lista completa)
 angal.opd.diagnosisnfulllist3.txt                                                                      = Diagnosi n.3 (lista completa)
@@ -1105,6 +1106,8 @@ angal.operation.result.success.txt                                              
 angal.operation.result.undefined.txt                                                                   = Incerto
 angal.operation.selecttype                                                                             = Seleziona Tipologia
 angal.operation.type                                                                                   = Tipologia
+angal.operationrow.clear.btn                                                                           = Svuota
+angal.operationrow.clear.btn.key                                                                       = S
 angal.operationrowedit.operation                                                                       = Interventi
 angal.operationrowedit.remark                                                                          = Note
 angal.operationrowedit.saveerror                                                                       = E' avvenuto un errore durante il salvataggio
@@ -1243,7 +1246,7 @@ angal.priceslist.acode                                                          
 angal.priceslist.adescription                                                                          = unaDescrizione
 angal.priceslist.changelist                                                                            = Cambia listino
 angal.priceslist.copy.btn                                                                              = Copia
-angal.priceslist.copy.btn.key                                                                          = C
+angal.priceslist.copy.btn.key                                                                          = P
 angal.priceslist.copyof                                                                                = Copia di
 angal.priceslist.currency.col                                                                          = Valuta
 angal.priceslist.currencystar                                                                          = Valuta*
@@ -1333,6 +1336,7 @@ angal.stat.august                                                               
 angal.stat.dailyopdmorbiditysummaryover5                                                               = MOH 705A - Over 5 - Daily Outpatient Morbidity Summary Sheet
 angal.stat.dailyopdmorbiditysummaryunder5                                                              = MOH 705A - Under 5 - Daily Outpatient Morbidity Summary Sheet
 angal.stat.december                                                                                    = Dicembre
+angal.stat.diseaselist                                                                                 = Lista Patologie
 angal.stat.diseasereport.title                                                                         = Rapporto Patologia
 angal.stat.examslist                                                                                   = Lista Esami
 angal.stat.examsreport.title                                                                           = Rapporto Esami
@@ -1439,7 +1443,7 @@ angal.therapy.pleasesavechangesfirst.msg                                        
 angal.therapy.removetherapy.btn                                                                        = Rimuovi Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Rimuovi Visita
-angal.therapy.removevisit.btn.key                                                                      = R
+angal.therapy.removevisit.btn.key                                                                      = V
 angal.therapy.selectapharmaceutical                                                                    = Selezionare un prodotto
 angal.therapy.settelephonenumber                                                                       = Assegna numero telefonico
 angal.therapy.smsm                                                                                     = SMS
@@ -1510,7 +1514,7 @@ angal.visit.durationinminutes                                                   
 angal.visit.findpatient.btn                                                                            = Trova Paziente
 angal.visit.findpatient.btn.key                                                                        = T
 angal.visit.gotodate.btn                                                                               = Vai alla Data:
-angal.visit.gotodate.btn.key                                                                           = V
+angal.visit.gotodate.btn.key                                                                           = D
 angal.visit.nextarrow.btn                                                                              = Avanti->
 angal.visit.nextarrow.btn.key                                                                          = A
 angal.visit.pleasechooseadate.msg                                                                      = Si prega di scegliere una data.
